public/assets/theme/css/style.css
/* ... */
/* Small Device = 320px */

@media only screen and (max-width: 479px) {
	.cart__total {
		padding: 35px 30px 40px;
	}
	.hero__items {
		height: 500px;
		padding-top: 60px;
	}
	.hero__text h2 {
		font-size: 36px;
		line-height: 48px;
	}
	.hero__social {
		margin-top: 145px;
	}
	.categories__deal__countdown .categories__deal__countdown__timer {
		margin-left: 0;
	}
	.instagram__pic__item {
		width: 100%;
	}
	/* .product__details__pic .nav-tabs .nav-item .nav-link .product__thumb__pic {
		width: 100%;
	} */
	.product__details__pic .nav-tabs .nav-item {
		margin-bottom: 10px;
		width: calc(33.33% - 10px);
	}
	.product__details__last__option h5:before {
		width: 280px;
	}
	.product__details__cart__option .quantity {
		margin-right: 0;
		margin-bottom: 15px;
	}
	.product__details__last__option h5 span {
		font-size: 16px;
	}
	.blog__hero__text h2 {
		font-size: 36px;
	}
	.categories__text h2 {
		font-size: 30px;
		line-height: 55px;
	}
	.categories__text:before {
		height: 250px;
	}
	section.contact.spad,
	section.about.spad,
	section.shop.spad,
	section.shopping-cart.spad,
	section.related.spad,
	section.checkout.spad {
		padding: 50px 0;
	}
	.product__details__pic{
		margin-bottom: 40px;
	}
	.product__details__cart__option{
		margin-bottom: 0;
	}
	.testimonial__pic {
		height: 320px;
	}
}

